# imapdl

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  config.h.cmake_in  cstring.h  enum.h  exception.h  lex_util.cc  lex_util.h  meson.build  meson_options.txt  sequence_set.cc  sequence_set.h
ascii/: control_sanitizer.h  control_sanitizer.rl
ci/: filterbr.py  gen-coverage.py
ci/docker/: build.sh  run.sh
ci/travis/linux/: after_success.sh  install.sh  script.sh
cmake/: coverage.cmake  init.cmake
copy/: client.cc  client.h  fetch_timer.cc  fetch_timer.h  header_printer.cc  header_printer.h  id.cc  id.h  journal.cc  main.cc  options.cc  options.h  serialize.cc  serialize.h  state.cc  state.h
doc/: imap-capabilities.csv
example/: client.cc  client.h  client_main.cc  hash.cc  length.rl  replay.cc  server.cc  server.h  server_main.cc
imap/: client_base.cc  client_base.h  client_lexer.h  client_lexer.rl  client_lexer_callback.cc  client_parser.h  client_parser.rl  client_parser_callback.cc  client_writer.cc  client_writer.h  common.rl  imap.cc  imap.h  literal_converter.rl  server_lexer.h  server_lexer.rl  server_parser.h  server_parser.rl
log/: log.cc  log.h
maildir/: maildir.cc  maildir.h
mime/: base64_decoder.h  base64_decoder.rl  base64_decoder_main.rl  header_decoder.h  header_decoder.rl  q_decoder.h  q_decoder.rl  q_decoder_main.rl
net/: client.cc  client.h  client_application.cc  client_application.h  ssl_util.cc  ssl_util.h  ssl_verification.cc  ssl_verification.h  tcp_client.cc  tcp_client.h
rfc/: abnf.rl  language.rl
trace/: trace.cc  trace.h
unittest/: copy.cc  cp.conf  cp_basic.trace  data.cc  data.h  dh1024.pem  dh2048.pem  dh512.pem  dh768.pem  fetch_header.trace  imap_client_lexer.cc  imap_client_parser.cc  imap_client_writer.cc  imap_server_lexer.cc  imap_server_parser.cc  lex_util.cc  list.trace  logindisabled.trace  maildir.cc  main.cc  mime.cc  part1.trace  part2.trace  replay.cc  sequence_set.cc  server.crt  server.key
